# HarnessGen

./: README.md  pyproject.toml  requirements.txt
data/: sample_tasks.jsonl
src/harnessgen/: __init__.py  benchmarks.py  cli.py  development.py  diagnosis.py  evaluation.py  harness.py  lifecycle.py  proposal.py  recalibration.py  runner.py  types.py
src/harnessgen/app/: cli.py
src/harnessgen/core/: __init__.py  factory.py  harness.py  modules.py  types.py
src/harnessgen/development/: __init__.py  budgeting.py  diagnosis.py  engine.py  evaluators.py  history.py  holdout.py  inventory.py  lifecycle.py  proposal.py  ranking.py  recalibration.py  replay.py  replay_analysis.py  schemas.py  signals.py  surgery.py
src/harnessgen/evaluation/: __init__.py  benchmarks.py  metrics.py  runner.py
tests/: test_smoke.py
