[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harnessgen"
version = "0.1.0"
description = "Diagnosis-triggered structural adaptation for LLM agent harnesses"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = []

[project.scripts]
harnessgen = "harnessgen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
