[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harnessgen"
version = "0.1.0"
description = "Diagnosis-triggered structural adaptation for LLM agent harnesses"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "networkx>=3.3,<4",
  "numpy>=1.26,<3",
  "scipy>=1.13,<2",
  "pandas>=2.2,<3",
  "scikit-learn>=1.5,<2",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "openai>=1.90,<2",
  "litellm>=1.83,<2",
  "requests>=2.32,<3",
  "httpx>=0.27,<1",
  "aiohttp>=3.10,<4",
  "tenacity>=8.5,<10",
  "tiktoken>=0.7,<1",
  "jsonschema>=4.23,<5",
  "orjson>=3.10,<4",
  "PyYAML>=6.0,<7",
  "ruamel.yaml>=0.18,<1",
  "rich>=13.8,<14",
  "rich-argparse>=1.5,<2",
  "simple-parsing>=0.1.6,<1",
  "typer>=0.12,<1",
  "tqdm>=4.66,<5",
  "diskcache>=5.6,<6",
  "sqlalchemy>=2.0,<3",
  "jinja2>=3.1,<4",
  "uvicorn>=0.30,<1",
  "fastapi>=0.112,<1",
  "flask>=3.0,<4",
  "flask-cors>=5.0,<6",
  "flask-socketio>=5.3,<6",
  "sentence-transformers>=3.0,<4",
  "transformers>=4.44,<5",
  "datasets>=2.21,<3",
  "accelerate>=0.33,<1",
  "faiss-cpu>=1.8,<2",
  "ray>=2.34,<3",
  "python-dotenv>=1.0,<2",
  "GitPython>=3.1,<4",
  "ghapi>=1.0,<2",
  "tabulate>=0.9,<1",
  "textual>=1.0,<2",
  "unidiff>=0.7,<1",
  "docker>=7.1,<8",
]

[project.optional-dependencies]
dev = []

[project.scripts]
harnessgen = "harnessgen.app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
